--- a/ui/style.css
+++ b/ui/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 .text-big {
-    font-size: 100%;
+    font-size: 300%;
 }
 
 .bold {
@@ -21,7 +21,7 @@ body {
     
 }
 .right{
-    text-align:right;
+    text-align:center;
 }
 
 
