--- a/ui/style.css
+++ b/ui/style.css
@@ -24,4 +24,15 @@ body {
     text-align:center;
 }
 
-
+.p1
+{
+    color:blue;
+    font:30px;
+    background-color:lightblue;
+border:10px solid red ;
+}
+.h2{
+    color:red;
+    font-variant:small-caps;
+    font-weight:bold;
+}
